fix: fix search input function and adjust layout bugs

--- a/style/main.css
+++ b/style/main.css
@@ -112,7 +112,7 @@ body {
 .aside__icon input {
     position: absolute;
     top: 0;
-    left: 0;
+    left: -1rem;
     opacity: 0;
     z-index: 2;
     width: 100%;
@@ -291,6 +291,11 @@ input[type=radio]:checked + img {
 
 .user-card__email, .user-card__phone, .user-card__location {
     position: relative;
+}
+
+.user-card__email a, .user-card__phone a {
+    text-decoration: none;
+    color: var(--dark-blue-color);
 }
 
 .user-card__email img, .user-card__phone img {
